--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -9,6 +9,7 @@ body {
     padding: 0px;
 }
 
+
 .header {
     background-color: #a2a2a2;
     width: 100vw;
@@ -64,13 +65,16 @@ nav ul {
 }
 
 .front {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(255, 0, 0);
     height: 600px;
     width: 100vw;
 }
 
 .front>img {
-    max-width: 100vw;
-    max-height: 100vw;
+    height: auto;
+    width: auto;
 
 }
