--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -13,8 +13,8 @@ body {
 .header {
     background-color: #a2a2a2;
     width: 100vw;
-    height: 32px;
-    display: inline-table
+    height: 2px;
+    display: list-item
 }
 
 .dropbtn {
@@ -64,6 +64,21 @@ nav ul {
     list-style-type: none;
 }
 
+.heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #a2a2a2;
+    width: 100vw;
+    height: 298px;
+
+}
+
+.heading>h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
+}
+
 .front {
     display: flex;
     justify-content: center;
@@ -77,4 +92,15 @@ nav ul {
     height: auto;
     width: auto;
 
+}
+
+.insideimage {
+    background-color: aqua;
+    width: 50vw;
+    height: 200px;
+}
+
+.insideimage>p {
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
 }
