--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -12,26 +12,28 @@ body {
 
 /* Header or Navigation stuff */
 .header {
-    background-color: rgb(26, 106, 145);
-    width: 100vw;
-    height: 60px;
+    display: flex;
+    justify-content: flex-end;
     /* position: fixed; */
 }
 
 .dropbtn {
-    background-color: #00000000;
+    background-color: #00000064;
     color: white;
     padding: 16px;
-    font-size: 16px;
+    font-size: 32px;
     border: none;
+    text-decoration: solid;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 
 
 .dropdown {
-    position: absolute;
+    position: fixed;
     display: flex;
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    justify-content: flex-end;
 }
 
 .dropdown-content {
@@ -41,6 +43,7 @@ body {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    font-size: 20px;
 }
 
 .dropdown-content ul li {
@@ -96,17 +99,20 @@ nav ul {
     justify-content: center;
     align-items: center;
     background-color: rgb(255, 0, 0);
-    height: 600px;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 
 
-.frontpage {}
+.frontpage {
+    height: 100%;
+    width: 100%;
+}
 
 .frontpage>img {
-    max-height: 100%;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -124,9 +130,10 @@ nav ul {
 }
 
 .mainfront {
+    margin-top: -5px;
     max-width: 100%;
     height: 20vw;
-    padding: 30px;
+    padding: 20px;
     background-color: #ddd;
     display: flex;
     justify-content: space-evenly;
@@ -136,6 +143,7 @@ nav ul {
 .mainfront>img {
     max-width: 35%;
     max-height: 90%;
+
 }
 
 .textbox {
