--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -177,12 +177,12 @@ nav ul {
 
 /* Links to wrap off page */
 
-.links {
+.imagelinks {
     width: 100%;
     height: 100%;
     background-color: #ddd;
     display: flex;
-    align-items: flex-start;
+    align-items: stretch;
     justify-content: space-evenly;
     height: auto;
     width: auto;
@@ -190,20 +190,45 @@ nav ul {
 
 
 .firstlink {
-    width: 30%;
-    height: 30%;
+    max-width: 30%;
+    max-height: 30%;
 }
 
 
 .secondlink {
-    width: 30%;
-    height: 30%;
+    max-width: 30%;
+    max-height: 30%;
 }
 
 
 .thirdlink {
-    width: 30%;
-    height: 30%;
+    max-width: 30%;
+    max-height: 30%;
+}
+
+.linkage {
+    width: 100%;
+    height: 100%;
+    background-color: #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
+    color: #000;
+}
+
+.linkone {
+    margin-left: 10%;
+}
+
+.linkone a {
+    color: #000;
+    text-decoration: none;
+}
+
+.linkthree {
+    margin-right: 10%;
 }
 
 /* FOOTER */
