--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -343,7 +343,7 @@ form {
 }
 
 .effectsmain>img {
-    width: 50%;
+    width: 48%;
     height: auto;
     padding: 20px;
 }
@@ -364,8 +364,25 @@ form {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.long {
-    height: 2000px;
+
+
+.effectsfrontwords>img {
+    width: 48%;
+    padding: 20px;
+    height: auto;
+    display: flex;
+    right: 0%;
+}
+
+.effectsfrontwords {
+    width: 100%;
+    background-color: white;
+    display: flex;
+}
+
+.effectsfrontwords>h5 {
     width: 50%;
-    background-color: gray;
+    height: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
 }
