--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -338,6 +338,8 @@ form {
     font-size: 100px;
 }
 
+
+
 .effectsmain {
     display: flex;
 }
@@ -385,4 +387,22 @@ form {
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
+}
+
+.genericfooter {
+    width: 100%;
+    height: 100px;
+    display: flex;
+
+    background-color: black;
+}
+
+.genericfooter>p {
+    color: white;
+}
+
+.footing {
+    background-color: #bbb;
+    height: 100px;
+    width: 100px;
 }
