--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -388,7 +388,7 @@ form {
 
 .effectsfrontwords {
     width: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     display: flex;
 }
 
@@ -439,10 +439,13 @@ form {
 
 .genericfooter>p {
     color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 10px;
+    font-size: 80px;
 }
 
 .footing {
-    background-color: #bbb;
+    background-color: rgb(0, 0, 0);
     height: 100px;
     width: 100px;
     right: 0%;
@@ -465,6 +468,7 @@ form {
 .faqwords {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 50px;
+    padding: 50px;
 }
 
 .faqhead>h1 {
