--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -427,31 +427,97 @@ form {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-/* footer workings!!! */
+/* Action Page Stuf */
 
-.genericfooter {
-    width: 100%;
-    height: 100px;
+/* .actionheader {
+    display: flex;
+    width: 100vw;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 100px;
+    justify-content: center;
+    align-items: center;
+} */
+
+.actionheader>h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
+}
+
+.actionfront {
+    width: 100vw;
+}
+
+.actionfront>img {
+    width: 100vw;
+    height: 50vw;
+}
+
+.actionfronttext {
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    background-color: #000;
+    width: 400px;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.actionfirst {
+    width: 100vw;
+}
+
+.actionfirst>img {
+    width: 48vw;
+    padding: 2%;
+    height: auto;
+    display: flex;
+    right: 0%;
+
+}
+
+.actionsfirsimage {
+    width: 90vw;
+    background-color: rgba(255, 255, 255, 0);
     display: flex;
 
-    background-color: black;
 }
 
-.genericfooter>p {
-    color: white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-left: 10px;
-    font-size: 80px;
+.actionsfirstimage>h5 {
+    width: 40vw;
+    height: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 100px;
 }
 
-.footing {
-    background-color: rgb(0, 0, 0);
-    height: 100px;
-    width: 100px;
-    right: 0%;
-    position: absolute;
-    justify-content: flex-end;
+.actionsecond {
+    display: flex;
+}
+
+.actionsecond>img {
+    width: 48vw;
+    height: auto;
+    padding: 2vw;
+}
+
+.actionssecondimage {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+
+.actionssecondimage>h5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 100px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 /* FAQ TYpa Stuf */
@@ -499,10 +565,6 @@ form {
     justify-content: space-evenly;
 }
 
-.faqlink1 {
-    /* background-color: black; */
-}
-
 .faqlink1 a>img {
     height: auto;
     width: 300px;
@@ -532,4 +594,32 @@ form {
 .dead>img {
     width: 100vw;
     height: 100vw;
+}
+
+
+/* footer workings!!! */
+
+.genericfooter {
+    width: 100%;
+    height: 100px;
+    display: flex;
+
+    background-color: black;
+}
+
+.genericfooter>p {
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 10px;
+    font-size: 80px;
+}
+
+.footing {
+    background-color: rgb(0, 0, 0);
+    height: 100px;
+    width: 100px;
+    right: 0%;
+    position: absolute;
+    justify-content: flex-end;
+    align-items: center;
 }
