--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -431,7 +431,7 @@ form {
 
 /* .actionheader {
     display: flex;
-    width: 100vw;
+    width: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 100px;
     justify-content: center;
@@ -459,7 +459,7 @@ form {
     position: absolute;
     right: 0%;
     bottom: 0%;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0);
     width: 400px;
     height: auto;
     justify-content: center;
@@ -467,28 +467,23 @@ form {
     display: flex;
 }
 
-.actionfirst {
-    width: 100vw;
-}
 
-.actionfirst>img {
-    width: 48vw;
-    padding: 2%;
+.actionfrontwords>img {
+    width: 48%;
+    padding: 20px;
     height: auto;
     display: flex;
     right: 0%;
-
 }
 
-.actionsfirsimage {
-    width: 90vw;
+.actionfrontwords {
+    width: 100%;
     background-color: rgba(255, 255, 255, 0);
     display: flex;
-
 }
 
-.actionsfirstimage>h5 {
-    width: 40vw;
+.actionfrontwords>h5 {
+    width: 50%;
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 100px;
@@ -499,9 +494,9 @@ form {
 }
 
 .actionsecond>img {
-    width: 48vw;
+    width: 48%;
     height: auto;
-    padding: 2vw;
+    padding: 20px;
 }
 
 .actionssecondimage {
