--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -143,13 +143,18 @@ nav ul {
     background-color: antiquewhite;
     display: flex;
     justify-content: space-evenly;
-
+    align-items: center;
 }
 
 .mainfront>img {
     max-width: 35%;
     max-height: 90%;
 
+}
+
+.mainfront p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 50px;
 }
 
 .textbox {
