--- a/CSS/styels.css
+++ b/CSS/styels.css
@@ -35,6 +35,8 @@ body {
 
 
 .dropdown {
+    /* position fixed to keep button in one place
+     */
     position: fixed;
     display: flex;
     /* margin-left: 20px; */
@@ -163,7 +165,8 @@ nav ul {
     align-items: center;
     flex-wrap: wrap;
     background: rgba(0, 0, 0, 0);
-    height: 10%;
+    margin-left: 200px;
+    height: 30%;
     width: 45%;
 
 }
@@ -339,8 +342,11 @@ color: rgb(0, 0, 0);
 */
 /* EFFECTS PAGE WORK */
 
-.effectsfrontpage>h3 {
-    /* position: absolute; */
+.effectsfrontpage {
+    display: flex;
+}
+
+.effectsfronttext {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -370,13 +376,13 @@ color: rgb(0, 0, 0);
     bottom: 0%;
 }
 
-.effectsimageword>h4 {
+.effectsfrontwords>h5 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 100px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 
@@ -384,7 +390,7 @@ color: rgb(0, 0, 0);
 .effectsfrontwords>img {
     width: 48%;
     padding: 20px;
-    height: auto;
+    height: 450px;
     display: flex;
     right: 0%;
 }
@@ -395,11 +401,16 @@ color: rgb(0, 0, 0);
     display: flex;
 }
 
-.effectsfrontwords>h5 {
-    width: 50%;
+.effectsfrontwords>p {
+    width: 48%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 100px;
+    font-size: 20px;
+    justify-content: center;
 }
 
 
@@ -410,7 +421,7 @@ color: rgb(0, 0, 0);
 
 .effectssecond>img {
     width: 48%;
-    height: auto;
+    height: 450px;
     padding: 20px;
 }
 
@@ -421,13 +432,16 @@ color: rgb(0, 0, 0);
     align-items: center;
 }
 
-.effectssecondimage>h5 {
+.effectssecondimage>p {
+    width: 48%;
+    padding: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    font-size: 100px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    height: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    justify-content: center;
 }
 
 /* Action Page Stuf */
@@ -450,12 +464,12 @@ color: rgb(0, 0, 0);
 }
 
 .actionfront {
-    width: 100vw;
+    width: 100%;
 }
 
 .actionfront>img {
-    width: 100vw;
-    height: 50vw;
+    width: 100%;
+    height: 50%;
 }
 
 .actionfronttext {
@@ -474,7 +488,7 @@ color: rgb(0, 0, 0);
 .actionfrontwords>img {
     width: 48%;
     padding: 20px;
-    height: auto;
+    height: 450px;
     display: flex;
     right: 0%;
 }
@@ -485,20 +499,27 @@ color: rgb(0, 0, 0);
     display: flex;
 }
 
-.actionfrontwords>h5 {
-    width: 50%;
+.actionfrontwords>p {
+    width: 48%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 100px;
+    font-size: 20px;
+    justify-content: center;
 }
 
 .actionsecond {
     display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
 
 .actionsecond>img {
     width: 48%;
-    height: auto;
+    height: 450px;
     padding: 20px;
 }
 
@@ -514,8 +535,12 @@ color: rgb(0, 0, 0);
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 100px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.actionssecondimage>ul {
+    margin-top: 30px;
 }
 
 /* FAQ TYpa Stuf */
@@ -531,8 +556,12 @@ color: rgb(0, 0, 0);
 
 .faqwords {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 50px;
-    padding: 50px;
+    font-size: 30px;
+    padding: 100px;
+}
+
+.faqwords ul {
+    margin: 20px;
 }
 
 .faqhead>h1 {
@@ -552,7 +581,7 @@ color: rgb(0, 0, 0);
 
 .faqlinks {
     /* background-color: black; */
-    width: 95%;
+    width: 70%;
     height: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -565,17 +594,17 @@ color: rgb(0, 0, 0);
 
 .faqlink1 a>img {
     height: auto;
-    width: 300px;
+    width: 200px;
 }
 
 .faqlink2 a>img {
     height: auto;
-    width: 300px;
+    width: 200px;
 }
 
 .faqlink3 a>img {
     height: auto;
-    width: 300px;
+    width: 200px;
 }
 
 
